# myportflio_api

./: .coveralls.yml  .gitignore  .gitpod.yml  Dockerfile  README.md  Test.yml  buddy.yaml  docker-compose.yml  portfolio.sql  pyproject.toml  reqiurements-dev.txt  requirements.txt  sql_app.db  test.db
.github/workflows/: build.yml  dev.yml  greetings.yml  python-app.yml
alembic/: env.py
alembic/versions/: 53603601b026_initial_commit.py  daed60513d3b_.py  dd62dc7da2a3_certification_table_change.py
app/: config.py  database.py  main.py  models.py  oauth2.py  utils.py
app/crud/: crud.py  item.py
app/router/: about.py  auth.py  certification.py  connect.py  education.py  experience.py  projects.py  skills.py  users.py
app/schema/: about_schema.py  certification_schema.py  connect_scheama.py  education_schema.py  experience_schema.py  projects_schema.py  skill_schema.py  user_schema.py
tests/: test_home.py  test_user.py
