[tool.poetry]
name = "myportflio_api"
version = "0.1.0"
description = "This is backend of my whatsapp UI based portfolio website"
authors = ["yasar <shaikhyasar460@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.72.0"}
SQLAlchemy = "^1.4.29"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cyptography"], version = "^3.3.0"}
alembic = "^1.7.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
